--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 DATABASE_PORT=8000
 PORT=8081
+DB_HOST=eporqep6b4b8ql12.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
+DB_PORT=3306
+DB_USER=vuyeshbpblsgyph1
+DB_PASSWORD=pdehywn84acsvfug
+DB_NAME=uqa6dcxazb226lbi
